Fixed images for Heroku

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -6,12 +6,12 @@
   <div class="jumbotron">
   <h1 class="display-4"><%= title %></h1>
   <p class="lead">Previous works:</p>
-  <img src="Assets/images/gamelevel.png"  class="center">
+  <img src="Assets/images/gamelevel.PNG"  class="center">
    <br>
    <p class="lead">My current project is a 2D puzzle platforming game I designed called Dazzling Doors that involves find keys for doors that lead to the end of the level.</p>
      <hr class="my-4">
   <br>
-  <img src="Assets/images/gamelevel2.png"  class="center">
+  <img src="Assets/images/gamelevel2.PNG"  class="center">
    <br>
     <p class="lead">This is another design of my own called Dragon Attack, another 2D Platformer with it's own set of traps, items, and enemies. </p>
     <hr class="my-4">
